working app with docker, admin page dont work

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Migrate==3.0.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+mysql-connector-python == 8.0.25
 greenlet==1.1.0
 image==1.5.33
 importlib-metadata==4.3.1
