--- a/heroku.yml
+++ b/heroku.yml
@@ -1,4 +1,31 @@
-build:
-  docker:
-    web: Dockerfile
+services:
+ web:
+  build: .
+  depends_on:
+   - mysqldb
+  command: python starter.py run --host='0.0.0.0'
+  ports:
+  - "5000:5000"
+  volumes:
+  - .:/app
+  - ./scribble:/app/scribble
+  environment:
+   - FLASK_APP=scribble
+   - FLASK_ENV=${TAG}
+   - FLASK_DEBUG=${TAG2}
 
+ mysqldb:
+  image: mysql
+  ports:
+  - 3306:3306
+  environment:
+  - MYSQL_ROOT_PASSWORD=root
+  volumes:
+  - mysql:/var/lib/mysql
+  - mysql_config:/etc/mysql
+  cap_add:
+  - SYS_NICE
+
+volumes:
+  mysql:
+  mysql_config:
