--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ python-editor==1.0.4
 pytz==2021.1
 six==1.16.0
 SQLAlchemy==1.4.17
+psycopg2-binary
 sqlparse==0.4.1
 toml==0.10.2
 typing-extensions==3.10.0.0
